# panopticon

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PRD.md  README.md  SECURITY.md  SUPPORT.md  build.rs  download_icons.ps1  gui_smoke_settings.ps1  test_output.txt
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml  ui_ux_feedback.yml
.github/workflows/: ci.yml  release.yml
assets/: themes.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING_STARTED.md  IMPLEMENTATION.md  PRD.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_INTEGRATIONS.md  UX_DESIGN.md
installer/: panopticon.iss
scripts/: bump-version.ps1
src/: constants.rs  error.rs  i18n.rs  input_ops.rs  layout.rs  lib.rs  logging.rs  main.rs  settings.rs  state.rs  theme.rs  thumbnail.rs  ui_option_ops.rs  window_enum.rs  window_ops.rs  workspace.rs
src/app/: action_handlers.rs  actions.rs  animation_engine.rs  cache.rs  cli.rs  command_palette.rs  dock.rs  dwm.rs  global_hotkey.rs  icon.rs  keyboard_actions.rs  layout_actions.rs  layout_pipeline.rs  managed_window_reconcile.rs  menu_utils.rs  mod.rs  model_sync.rs  native_events.rs  native_runtime.rs  options.rs  runtime_effects.rs  runtime_loop.rs  runtime_support.rs  secondary_windows.rs  settings_ui.rs  shell_state.rs  startup.rs  theme_state.rs  theme_ui.rs  thumbnail_interactions.rs  thumbnail_model_builder.rs  tick_phases.rs  tray.rs  tray_actions.rs  tray_runtime.rs  ui_callbacks.rs  ui_translations.rs  updates.rs  viewport_manager.rs  window_collection.rs  (+4 more)
src/app/command_palette/: catalog.rs  mod.rs
src/app/secondary_windows/: dialogs.rs  placement.rs  settings_app_rules_sync.rs  settings_callbacks.rs  settings_filter_sync.rs  settings_helpers.rs  settings_preset_sync.rs  settings_sync.rs  settings_window.rs  workspace.rs
src/app/secondary_windows/settings_callbacks/: app_rules.rs  editor.rs  mod.rs  profiles.rs  runtime.rs
src/app/settings/: app_rules_sync.rs  apply_effects.rs  filter_sync.rs  helpers.rs  mod.rs  preset_sync.rs  sync.rs  translations.rs  ui.rs  view_model.rs
src/app/settings/callbacks/: app_rules.rs  editor.rs  mod.rs  profiles.rs  runtime.rs
src/app/tray_runtime/: icons.rs  menu.rs  notify.rs
temp/: panopticon-stderr.txt  tasks_completed.md  tech_debt.md
tests/: input_ops_tests.rs  layout_tests.rs  ui_option_ops_tests.rs  window_ops_tests.rs
ui/: common.slint  main.slint
ui/components/: custom_themed_widgets.slint  empty_state.slint  overlay_scrollbar.slint  resize_handle.slint  thumbnail_card.slint  toolbar.slint
ui/windows/: about_window.slint  command_palette_window.slint  settings_window.slint  tag_dialog_window.slint
