[package]
name = "panopticon"
version = "0.1.21"
edition = "2021"
description = "Real-time window thumbnail viewer for Windows using the DWM API"
readme = "README.md"
license = "MIT"
build = "build.rs"

# ── Dependencies ──────────────────────────────────────────────

[dependencies]
slint = { version = "1.15.1", features = ["raw-window-handle-06", "backend-winit", "renderer-skia"] }
raw-window-handle = "0.6.2"
thiserror = "2.0.18"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
rfd = "0.17.2"

[build-dependencies]
slint-build = "1.15.1"
winres = "0.1.12"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
]

# ── Profiles ──────────────────────────────────────────────────

[profile.release]
opt-level = 3
lto = true
strip = true

# ── Lints ─────────────────────────────────────────────────────

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Win32 interop requires extensive integer casting — allow the noisy cast lints.
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
# WindowsAndMessaging exports hundreds of symbols; a wildcard is practical.
wildcard_imports = "allow"
# Error / panic doc sections are tracked but not enforced yet.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# "WindowInfo in window_enum" is perfectly clear.
module_name_repetitions = "allow"
# Win32 paint routines are inherently long.
too_many_lines = "allow"
# x / y / w / h are idiomatic for geometry.
similar_names = "allow"
